separate parameters prediction from price and techprocess prediction, add pdf tests
